@@ -3,8 +3,10 @@ Process Hacker
 1.3.5.5
  * NEW:
    * #2596481 - "Add option for one instance of Process Hacker"
+   * #2647387 - "Add descriptions to Memory Editor's buttons"
    * #2647418 - "Add ctrl+A and ctrl+C to threads, token, modules etc"
    * #2647422 - "Suggest filename in Memory Editor->Data->Save"
+   * #2647435 - "Add descriptions to Memory search results window"
    * Modules tab shows mapped files
    * "Reduce Working Set" function
  * FIXED:
